<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.example.booksapp.viewmodel.UserViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/authScreenBackgroundColor"
        tools:context=".ui.LoginFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDontHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="#2e91b3"
                    android:text="@string/don_t_have_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:cornerRadius="@dimen/_7sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/please_login"
                    android:textColor="#a987f7"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                    app:boxCornerRadiusTopStart="@dimen/_15sdp"
                    app:error="@{listener.emailError}"
                    app:errorIconDrawable="@null">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{()->listener.validateEmail()}"
                        android:drawableStart="@drawable/email"
                        android:drawablePadding="@dimen/_10sdp"
                        android:drawableTint="@color/iconColor"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@={listener.email}"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                    app:boxCornerRadiusTopStart="@dimen/_15sdp"
                    app:error="@{listener.passwordError}"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/iconColor">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{()->listener.validatePassword()}"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="@dimen/_10sdp"
                        android:drawableTint="@color/iconColor"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={listener.password}"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="#2e91b3"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:cornerRadius="@dimen/_7sdp" />
                <!--                android:onClick="@{()->listener.loginSignUpClicked()}"-->

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/forgot_password"
                    android:textColor="#2e91b3"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
