<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.example.booksapp.viewmodel.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/authScreenBackgroundColor"
        tools:context=".ui.SignUpFragment">


        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/create_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:maxEms="12"
                    android:maxLines="2"
                    android:text="@string/tip_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageUser"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center_horizontal"
                    android:maxWidth="@dimen/_70sdp"
                    android:maxHeight="@dimen/_70sdp"
                    android:src="@drawable/user" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutSignUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                    app:boxCornerRadiusTopStart="@dimen/_15sdp"
                    app:error="@{listener.emailError}"
                    app:errorIconDrawable="@null">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSignUpEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{()->listener.validateEmail()}"
                        android:drawableStart="@drawable/email"
                        android:drawablePadding="@dimen/_10sdp"
                        android:drawableTint="@color/iconColor"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@={listener.email}"
                        android:textSize="@dimen/_12ssp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                    app:boxCornerRadiusTopStart="@dimen/_15sdp"
                    app:error="@{listener.nameError}"
                    app:errorIconDrawable="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/user"
                        android:drawablePadding="@dimen/_10sdp"
                        android:drawableTint="@color/iconColor"
                        android:hint="@string/name"
                        android:text="@={listener.name}"
                        android:inputType="text"
                        android:textSize="@dimen/_12ssp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutSignUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                    app:boxCornerRadiusTopStart="@dimen/_15sdp"
                    app:error="@{listener.passwordError}"
                    app:errorIconDrawable="@null"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/iconColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSignUpPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{()->listener.validatePassword()}"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="@dimen/_10sdp"
                        android:drawableTint="@color/iconColor"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={listener.password}"
                        android:textSize="@dimen/_12ssp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                    app:boxCornerRadiusTopStart="@dimen/_15sdp"
                    app:error="@{listener.confirmPasswordError}"
                    app:errorIconDrawable="@null"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/iconColor">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{()->listener.validateConfirmPassword()}"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="@dimen/_10sdp"
                        android:drawableTint="@color/iconColor"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:text="@={listener.confirmPassword}"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/warningTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:maxEms="14"
                    android:maxLines="2"
                    android:text="@string/warning_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="#2e91b3"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:cornerRadius="@dimen/_7sdp" />
                <!--                android:onClick="@{()->listener.loginSignUpClicked()}"-->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAlreadyHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:backgroundTint="#2e91b3"
                    android:text="@string/already_have_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:cornerRadius="@dimen/_7sdp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>